<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etHeader"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/enter_note_header"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:fontFamily="@font/poppins"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etContent"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:hint="@string/enter_note_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etHeader" />

    <Button
        android:id="@+id/btnSaveUpdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:fontFamily="@font/poppins"
        android:text="@string/save_or_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etContent" />
</androidx.constraintlayout.widget.ConstraintLayout>